-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 23
-
Component/s: hotspot
-
b05
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8335427 | 23.0.1 | Axel Boldt-Christmas | P2 | Resolved | Fixed | b02 |
| JDK-8335262 | 23 | Axel Boldt-Christmas | P2 | Resolved | Fixed | b30 |
For most task this looks seemingly too restrictive and unnecessary. We should evaluate where this is needed and try to remove the artificial lifetime extension that can occur.
The CLDG iterator can also become far less restrictive after
Holding `ClassLoaderDataGraph_lock` may still be required for some uses but it is not a requirement for the iterator.
In
Added this as a bug so we do not lose track of this issue.
This effects generational ZGC the most as the last ditch metaspace GCs are concurrent and it only does reference processing (and by extension class unloading) for the old generation in major collections.
- backported by
-
JDK-8335262 Metadata artificially kept alive
-
- Resolved
-
-
JDK-8335427 Metadata artificially kept alive
-
- Resolved
-
- duplicates
-
JDK-8241075 appcds/customLoader/HelloCustom_JFR.java failed due to "should have been unloaded"
-
- Closed
-
- relates to
-
JDK-8280454 G1: ClassLoaderData verification keeps CLDs live that causes problems with VerifyDuringGC during Remark
-
- Resolved
-
-
JDK-8326005 GenZGC: Kitchensink7D fails with java.lang.OutOfMemoryError: Metaspace
-
- Closed
-
-
JDK-8340586 JdkJfrEvent::get_all_klasses stores non-strong oops in JNI handles
-
- Closed
-
-
JDK-8335059 Consider renaming ClassLoaderData::keep_alive
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/5909d541
-
Commit
openjdk/jdk/e5fbc631
-
Review(jdk23)
openjdk/jdk/19929
-
Review(master)
openjdk/jdk/19769