8326820: Metadata artificially kept alive